# python-renovate-playground

./: Dockerfile  README.md  mypy.ini  package.json
.github/: renovate.json
pip/: requirements.txt
pipenv/: Pipfile
poetry/: pyproject.toml
