[tool.poetry]
name = "poetry"
version = "0.1.0"
description = ""
authors = ["pyto86 <pyto86.me@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.14.14"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
