[tool.poetry]
name = "poetry"
version = "0.1.0"
description = ""
authors = ["pyto86 <pyto86.me@gmail.com>"]

[tool.poetry.dependencies]
python = "3.7.9"
boto3 = "1.16.7"
numpy = "^1.19.0"
pandas = "1.0.5"
more-itertools = "^8.6.0"

[tool.poetry.dev-dependencies]
pytest = "5.4.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
